--- a/layouts/help/list.html
+++ b/layouts/help/list.html
@@ -11,8 +11,7 @@
       </span>
       <h1 class="hero-title">{{ .Title | default "Getting Started" }}</h1>
       <p class="hero-description">
-        {{ .Description | default "Learn the fundamentals of DSC and get up to
-        speed with our comprehensive guides." }}
+        {{ .Description | default "Learn the fundamentals of DSC and get up to speed with our comprehensive guides." }}
       </p>
     </div>
   </div>
