--- a/layouts/help/list.html
+++ b/layouts/help/list.html
@@ -7,12 +7,10 @@
     <div class="hero-content">
       <span class="hero-badge">
         <i class="ri-book-open-line"></i>
-        Learning Center
+        Help center
       </span>
       <h1 class="hero-title">{{ .Title | default "Getting Started" }}</h1>
-      <p class="hero-description">
-        {{ .Description | default "Learn the fundamentals of DSC and get up to speed with our comprehensive guides." }}
-      </p>
+      <p class="hero-description">{{ .Description | default "Learn the fundamentals of DSC and get up to speed with our comprehensive guides." }}</p>
     </div>
   </div>
 </section>
