--- a/layouts/partials/header-new.html
+++ b/layouts/partials/header-new.html
@@ -109,7 +109,8 @@
             <path d="m21 21-4.3-4.3" />
           </svg>
           <span>Search</span>
-          <kbd>⌘K</kbd>
+          <kbd class="shortcut-mac">⌘K</kbd>
+          <kbd class="shortcut-other">Ctrl+K</kbd>
         </button>
 
         <!-- Theme Toggle -->
